<resources>
    <string name="defaultText">TextView</string>

    <string name="app_name">Tambo</string>
    <string name="BP">Profesor</string>
    <string name="BS">Estudiante</string>
    <string name="PQDM">Aceptar Pregunta</string>
    <string name="Accept">Aceptar</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Correo">Correo</string>
    <string name="BotonEntrar">Entrar</string>
    <string name="BotonRegistrarse">Registrarse</string>
    <string name="TvRegistrate">Registrate</string>
    <string name="EtUserName">Nombre de Usuario</string>
    <string name="EtFirstName">Nombre</string>
    <string name="EtLastName">Apellido</string>
    <string name="EtPassword">Contraseña</string>
    <string name="EtPhone">Celular</string>
    <string name="BotonAceptar">Aceptar</string>
    <string name="imageItemQuestion">imgItem</string>


    <string name="textDialogSelect">La clase es </string>
    <string name="textDialogSelectAskBy">Requerido por: </string>
    <string name="textDialogSelectDate">¿Cuándo?</string>
    <string name="textDialogSelectPlace">¿Dónde?</string>

    <string name="textDialogCompleted">¿La clase fue completada?</string>
    <string name="textDialogSelectAnswedBy">Aceptado por: </string>

    <!--Yekabe Activiy-->
    <string name="text_learn">Aprende</string>
    <string name="text_teach">Enseña</string>
    <string name="open_nav">Abrir</string>
    <string name="close_nav">Cerrar</string>
    <string name="text_account">Mi perfil</string>
    <string name="text_events">Eventos</string>
    <string name="text_info">Información</string>
    <string name="profile_icon">profile_icon</string>
    <string name="username">¿Qué tal vas </string>
    <string name="student_message">Lo que quieres conocer</string>
    <string name="professor_message">Lo que los demás quieren saber</string>
    <string name="empty_classes">Ups, no hay nada que mostrar aquí</string>
    <string name="empty_classes_student">Parece que no has pedido ninguna clase aún</string>


    <string name="reload_event">Recargar</string>
    <string name="info_post">Ingresa un breve comentario y una ubicación</string>
    <string name="info_post_question">Ingresa aquí lo que quieras aprender</string>

    <!--Login activity-->
    <string name="new_account">¿Sin una cuenta? Créala aquí</string>

    <!--Post activity-->
    <string name="info_post3">Selecciona un día, hora y lugar para el encuentro</string>
    <string name="info_post2">Sitio y comentario</string>
    <string name="info_post1">¿Qué quieres aprender?</string>
    <string name="info_post4">¿De qué tipo de conocimiento se trata?</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="time_format">hh:mm</string>
    <string name="place_info">Dirección</string>
    <string name="error_date">No puedes agendar en el pasado, entonces te lo dejamos para hoy</string>


    <!--Toolbar's title-->
    <string name="toolbar_title_info">Volver a Yekabe</string>
    <string name="toolbar_title_post">¡Aprende!</string><!--http://saliba.caroycuervo.gov.co/index.php/conocer-->

    <!--Tags classes-->
    <string name="tag_select">Todos</string>
    <string name="tag_ciencias_naturales">Ciencias Naturales</string>
    <string name="tag_ciencias_sociales">Ciencias Sociales</string>
    <string name="tag_ciencias_exactas">Ciencias Exactas</string>
    <string name="tag_arte">Arte, musica o cultura</string>
    <string name="tag_gastronomia">Gastronomia</string>
    <string name="tag_otros">Otros</string>
    <string name="title_activity_maps">Map</string>

    <!--Version App-->
    <string name="tag_version">Tambo versión 0.0.5</string>
    <string name="tag_changes">*Mejorada la sección de posteo de preguntas \n* Arreglados bugs menores</string>

</resources>
